// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading color 1`] = `
.c0 {
  font-size: 1.2rem;
  position: absolute;
  width: 16.666666666666668em;
  height: 16.666666666666668em;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
}

.c1 {
  height: 16.666666666666668em;
  width: 1.875em;
  position: absolute;
  left: 7.395833333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

.c3 {
  height: 16.666666666666668em;
  width: 1.6875em;
  position: absolute;
  left: 7.489583333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7999999999999999s;
  animation-delay: 0.7999999999999999s;
}

.c5 {
  height: 16.666666666666668em;
  width: 1.5187500000000003em;
  position: absolute;
  left: 7.5739583333333345em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.8999999999999999s;
  animation-delay: 0.8999999999999999s;
}

.c7 {
  height: 16.666666666666668em;
  width: 1.3668750000000005em;
  position: absolute;
  left: 7.649895833333333em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.9999999999999999s;
  animation-delay: 0.9999999999999999s;
}

.c9 {
  height: 16.666666666666668em;
  width: 1.2301875000000004em;
  position: absolute;
  left: 7.718239583333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 1.0999999999999999s;
  animation-delay: 1.0999999999999999s;
}

.c2 {
  display: block;
  width: 1.875em;
  height: 1.875em;
  background: red;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  display: block;
  width: 1.6875em;
  height: 1.6875em;
  background: red;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c6 {
  display: block;
  width: 1.5187500000000003em;
  height: 1.5187500000000003em;
  background: red;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8 {
  display: block;
  width: 1.3668750000000005em;
  height: 1.3668750000000005em;
  background: red;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c10 {
  display: block;
  width: 1.2301875000000004em;
  height: 1.2301875000000004em;
  background: red;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  className="c0"
  width={200}
>
  <div
    className="c1"
    width={200}
  >
    <span
      className="c2"
      color="red"
      scale={false}
    />
  </div>
  <div
    className="c3"
    width={200}
  >
    <span
      className="c4"
      color="red"
      scale=""
    />
  </div>
  <div
    className="c5"
    width={200}
  >
    <span
      className="c6"
      color="red"
      scale=""
    />
  </div>
  <div
    className="c7"
    width={200}
  >
    <span
      className="c8"
      color="red"
      scale=""
    />
  </div>
  <div
    className="c9"
    width={200}
  >
    <span
      className="c10"
      color="red"
      scale=""
    />
  </div>
</div>
`;

exports[`Loading width 1`] = `
.c0 {
  font-size: 1.2rem;
  position: absolute;
  width: 1.1666666666666667em;
  height: 1.1666666666666667em;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
}

.c1 {
  height: 1.1666666666666667em;
  width: 0.15em;
  position: absolute;
  left: 0.5083333333333333em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

.c3 {
  height: 1.1666666666666667em;
  width: 0.135em;
  position: absolute;
  left: 0.5158333333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7999999999999999s;
  animation-delay: 0.7999999999999999s;
}

.c5 {
  height: 1.1666666666666667em;
  width: 0.12150000000000001em;
  position: absolute;
  left: 0.5225833333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.8999999999999999s;
  animation-delay: 0.8999999999999999s;
}

.c7 {
  height: 1.1666666666666667em;
  width: 0.10935000000000003em;
  position: absolute;
  left: 0.5286583333333333em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.9999999999999999s;
  animation-delay: 0.9999999999999999s;
}

.c9 {
  height: 1.1666666666666667em;
  width: 0.09841500000000003em;
  position: absolute;
  left: 0.5341258333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 1.0999999999999999s;
  animation-delay: 1.0999999999999999s;
}

.c2 {
  display: block;
  width: 0.15em;
  height: 0.15em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  display: block;
  width: 0.135em;
  height: 0.135em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c6 {
  display: block;
  width: 0.12150000000000001em;
  height: 0.12150000000000001em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8 {
  display: block;
  width: 0.10935000000000003em;
  height: 0.10935000000000003em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c10 {
  display: block;
  width: 0.09841500000000003em;
  height: 0.09841500000000003em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  className="c0"
  width={14}
>
  <div
    className="c1"
    width={14}
  >
    <span
      className="c2"
      color="#13bef7"
      scale={false}
    />
  </div>
  <div
    className="c3"
    width={14}
  >
    <span
      className="c4"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c5"
    width={14}
  >
    <span
      className="c6"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c7"
    width={14}
  >
    <span
      className="c8"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c9"
    width={14}
  >
    <span
      className="c10"
      color="#13bef7"
      scale=""
    />
  </div>
</div>
`;

exports[`Loading 没有设置属性 1`] = `
.c0 {
  font-size: 1.2rem;
  position: absolute;
  width: 16.666666666666668em;
  height: 16.666666666666668em;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
}

.c1 {
  height: 16.666666666666668em;
  width: 1.875em;
  position: absolute;
  left: 7.395833333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7s;
  animation-delay: 0.7s;
}

.c3 {
  height: 16.666666666666668em;
  width: 1.6875em;
  position: absolute;
  left: 7.489583333333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.7999999999999999s;
  animation-delay: 0.7999999999999999s;
}

.c5 {
  height: 16.666666666666668em;
  width: 1.5187500000000003em;
  position: absolute;
  left: 7.5739583333333345em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.8999999999999999s;
  animation-delay: 0.8999999999999999s;
}

.c7 {
  height: 16.666666666666668em;
  width: 1.3668750000000005em;
  position: absolute;
  left: 7.649895833333333em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 0.9999999999999999s;
  animation-delay: 0.9999999999999999s;
}

.c9 {
  height: 16.666666666666668em;
  width: 1.2301875000000004em;
  position: absolute;
  left: 7.718239583333334em;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation: fDQPTE 2.5s infinite;
  animation: fDQPTE 2.5s infinite;
  -webkit-animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  animation-timing-function: cubic-bezier(0.28,0.8,0.69,1);
  -webkit-animation-delay: 1.0999999999999999s;
  animation-delay: 1.0999999999999999s;
}

.c2 {
  display: block;
  width: 1.875em;
  height: 1.875em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4 {
  display: block;
  width: 1.6875em;
  height: 1.6875em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c6 {
  display: block;
  width: 1.5187500000000003em;
  height: 1.5187500000000003em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c8 {
  display: block;
  width: 1.3668750000000005em;
  height: 1.3668750000000005em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c10 {
  display: block;
  width: 1.2301875000000004em;
  height: 1.2301875000000004em;
  background: #13bef7;
  border-radius: 50%;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

<div
  className="c0"
  width={200}
>
  <div
    className="c1"
    width={200}
  >
    <span
      className="c2"
      color="#13bef7"
      scale={false}
    />
  </div>
  <div
    className="c3"
    width={200}
  >
    <span
      className="c4"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c5"
    width={200}
  >
    <span
      className="c6"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c7"
    width={200}
  >
    <span
      className="c8"
      color="#13bef7"
      scale=""
    />
  </div>
  <div
    className="c9"
    width={200}
  >
    <span
      className="c10"
      color="#13bef7"
      scale=""
    />
  </div>
</div>
`;
